# Wii-U-Title-Boot-Editor

./: .clang-format  .gitignore  README.md  default.nix  flake.nix  meson.build  meson_options.txt
.github/workflows/: build.yml
src/: file_dialog.cpp  file_dialog.hpp  fs.cpp  fs.hpp  gl_image.hpp  image.cpp  image.hpp  macro.hpp  main.cpp  main_window.cpp  main_window.hpp  progress.hpp  sound.cpp  sound.hpp  sound_player.cpp  sound_player.hpp  title_meta.cpp  title_meta.hpp  title_mgr.cpp  title_mgr.hpp  types.hpp  utils.hpp
